--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         height: 124px;
         line-height: 40px;
       }
+      .thermometer, .order, .social {
+        /* line-height to verticallycenter: */
+        height: 40px;
+        line-height: 40px;
+      }
       div.row {
         border: 1px solid;
       }
