--- a/index.html
+++ b/index.html
@@ -2,102 +2,315 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>My First Bitstarter</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
-	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
+		<title>Noted Code Bitstarter</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+		<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+		<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+		
+    	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
+    	<link href='//fonts.googleapis.com/css?family=Source+Code+Pro:500' rel='stylesheet' type='text/css'>
 		<style type="text/css">
-		/* Large desktop */
-		@media (min-width: 980px) {
+			/* Large desktop */
+			@media (min-width: 980px) {
+				body {
+				}
+				.linediv-l {
+					border-right: 1px white solid;
+				}
+				.linediv-r {
+					border-left: 1px white solid;
+				}
+			}
+
+			/* Landscape phones and down */
+			@media (max-width: 480px) {
+				.copy {
+					padding: 2.5% 10%;
+				}
+				.linediv-l {
+					border-bottom: 1px white solid;
+				}
+				.linediv-r {
+					border-top: 1px white solid;
+				}
+			}
+			/* All form factors */
+
+			.jumbotron {
+				position: relative;
+				padding: 80px 0px 40px 0px;
+				color: #fff;
+				text-shadow: 0 1px 3px rgba(0,0,0,.4),0 0 30px rgba(0,0,0,.075);
+				background-color: #274055;
+				-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
+				-moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
+				box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
+			}
+			.darkblock {
+				padding: 80px 0px 40px 0px;
+				color: #fff;
+				text-shadow: 0 1px 3px rgba(0,0,0,.4),0 0 30px rgba(0,0,0,.075);
+				background-color: #274055;
+				-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
+				-moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
+				box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
+
+			}
+			.separated {
+				margin-top: 20px;
+			}
+			.bigseparated {
+				margin-top: 40px;
+				margin-bottom: 20px;
+			}
+			.intro {
+				margin-top: 60px;
+			}
+
+			img#main-logo {
+				position: relative;
+				top: -4px;
+			}
+
+			div#mainbody {
+				margin-top: 40px;
+			}
+
+			div.section {
+				margin-top: 40px;
+			}
+
+			.center {
+				text-align: center;
+			}
+
+			/* Main body and headings */
 			body {
-				padding-top: 60px;
+				font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 			}
-			.linediv-l {
-				border-right: 1px white solid;
+			.heading, .subheading {
+				font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+				text-align: center;
 			}
-			.linediv-r {
-				border-left: 1px white solid;
+			p.lead {
+				padding-top: 1.5%;
+				font-size: 24px;
+				line-height: 30px;
 			}
-		}
+			p {
+				font-size: 18px;
+				line-height: 24px;
+			}
 
-		/* Landscape phones and down */
-		@media (max-width: 480px) {
+			/* Video pitch and Action */
+			.pitch {
+				padding: 2.5% 0%;
+			}
+			.order {
+				padding: 2% 0%;
+			}
+			.actions {
+				background-color: #ffffff;
+				padding: 3% 0%;
+			}
+			.video, .thermometer, .order, .social, .statistics {
+				text-align: center;
+			}
+			.statistics h3, .statistics p {
+				color: #333;
+			}
+
+			/* Marketing Copy and Footer */
 			.copy {
-				padding: 2.5% 10%;
+				padding-top: 2.5%;
+				padding-bottom: 2.5%;
+				font-size: 20px;
+				font-weight: 200;
+				line-height: 30px;
 			}
-			.linediv-l {
-				border-bottom: 1px white solid;
+			.copy li {
+				line-height: 30px;
 			}
-			.linediv-r {
-				border-top: 1px white solid;
+			.asset {
+				padding: 2.5% 0%;
 			}
-		}
+			.footer {
+				color: #cccccc;
+				text-align: center;
+			}
+			.footer p {
+				font-size: 11px;
+			}
+			.footer a {
+				color: #ccccff;
+			}
 
-		/* All form factors *?
+			/* Ribbon */
 
-		/* Main body and headings */
-		body {
-			font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-		}
-		.heading, .subheading {
-			font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
-			text-align: center;
-		}
-		p.lead {
-			padding-top: 1.5%;
-			font-size: 24px;
-			line-height: 30px;
-		}
-		p {
-			font-size: 18px;
-			line-height: 24px;
-		}
+			
+			.github-fork-ribbon {
+				position: fixed;
 
-		/* Video pitch and Action */
-		.pitch {
-			padding: 2.5% 0%;
-		}
-		.order {
-			padding: 2% 0%;
-		}
-		.actions {
-			background-color: #343434;
-			padding: 3% 0%;
-		}
-		.video, .thermometer, .order, .social, .statistics {
-			text-align: center;
-		}
-		.statistics h3, .statistics p {
-			color: white;
-		}
+				/* Add a bit of padding to give some substance outside the "stitching" */
+				padding: 2px 0;
 
-		/* Marketing Copy and Footer */
-		.copy {
-			padding-top: 2.5%;
-			padding-bottom: 2.5%;
-			text-align: justify;
-		}
-		.asset {
-			padding: 2.5% 0%;
-		}
-		.footer {
-			color: #cccccc;
-			text-align: center;
-		}
-		.footer p {
-			font-size: 11px;
-		}
-		.footer a {
-			color: #ccccff;
-		}
+				/* Set the base colour */
+				background-color: #a23;
+
+				/* Set a gradient: transparent black at the top to almost-transparent black at the bottom */
+				background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.00)), to(rgba(0, 0, 0, 0.15)));
+				background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.00), rgba(0, 0, 0, 0.15));
+				background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.00), rgba(0, 0, 0, 0.15));
+				background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.00), rgba(0, 0, 0, 0.15));
+				background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0.00), rgba(0, 0, 0, 0.15));
+				background-image: linear-gradient(top, rgba(0, 0, 0, 0.00), rgba(0, 0, 0, 0.15));
+				filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#000000', EndColorStr='#000000');
+
+				/* Add a drop shadow */
+				-webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
+				box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.5);
+
+				z-index: 9999;
+			}
+			@media (max-width: 979px) {
+				body {
+					padding-left: 0;
+					padding-right: 0;
+				}
+				.github-fork-ribbon {
+					position: absolute;
+					display: none;
+				}
+
+				.container {
+					padding-left: 20px;
+					padding-right: 20px;
+				}
+
+				.darkblock {
+					padding-left: 20px;
+					padding-right: 20px;
+				}
+
+				.navbar-fixed-top {
+					margin-bottom: 0px;
+				}
+				.jumbotron {
+					padding: 20px 20px 20px 20px;
+				}
+			}
+
+			@media (max-width: 767px) {
+				.navbar-fixed-top .navbar-inner {
+					padding-left: 30px;
+					padding-right: 30px;
+				}
+			}
+
+
+			.github-fork-ribbon a,
+			.github-fork-ribbon a:hover {
+				/* Set the font */
+				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+				font-size: 13px;
+				font-weight: 700;
+				color: white;
+
+				/* Set the text properties */
+				text-decoration: none;
+				text-shadow: 0 -1px rgba(0,0,0,0.5);
+				text-align: center;
+
+				width: 300px;
+				line-height: 20px;
+
+				/* Set the layout properties */
+				display: inline-block;
+				padding: 4px 0;
+
+				/* Add "stitching" effect */
+				border-width: 1px 0;
+				border-style: dotted;
+				border-color: rgba(255,255,255,0.7);
+			}
+
+			.github-fork-ribbon a span.smalltext {
+				font-size: 12px;
+			}
+
+			.github-fork-ribbon-wrapper {
+				width: 200px;
+				height: 200px;
+				position: absolute;
+				overflow: hidden;
+				top: 0;
+				z-index: 9999;
+			}
+
+			.github-fork-ribbon-wrapper.right {
+				right: 0;
+			}
+
+			.github-fork-ribbon-wrapper.right .github-fork-ribbon {
+				top: 52px;
+				right: -73px;
+
+				/* Rotate the banner 45 degrees */
+				-webkit-transform: rotate(45deg);
+				-moz-transform: rotate(45deg);
+				-o-transform: rotate(45deg);
+				transform: rotate(45deg);
+			}
+
+			.contact {
+				margin-top: 20px;
+			}
+			.contact ul {
+				list-style-type: none;
+				line-height: 30px;
+				margin: 0;
+			}
+			.contact ul li {
+				font-size: 20px;
+				font-weight: 200;
+				line-height: 30px;
+			}
+
+			.popup {
+				font-weight: 200;
+				font-size: 18px;
+				margin-top: 10px;
+			}
+
 		</style>
+
+		<script type="text/javascript">
+			$(document).ready(function() {
+				$('#tweet').on('click', function() {
+					console.log("Tweet!");
+				});
+
+				$('#email').html('<i class="icon-envelope-alt"></i>&nbsp;<a href="mailto:paul@notedcode.com">paul@<span style="display:none">nowhere</span>notedcode.com</a>');
+
+				$('#sydney').popover({
+					content: "<p class=\"popup\">I'm in Sydney.<br/> Where are you?</p>",
+					html: true,
+					placement: 'right',
+					trigger: 'hover'
+				});
+				
+			});
+		</script>
 	</head>
 	<body>
+		<div id="ribbon" class="github-fork-ribbon-wrapper right" style="pointer-events: none;">
+    		<div class="github-fork-ribbon">
+        		<a href="https://class.coursera.org/startup-001/class/index" style="pointer-events: all;">Made for the Coursera<br/><span class="smalltext">Stanford Startup Engineering Course</span></a>
+    		</div>
+		</div>
 
 		<!-- Mobile-friendly navbar adapted from example. -->
 		<!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
@@ -109,10 +322,10 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="brand" href="#">Bitstarter</a>
+					<a class="brand" href="#">Noted Code Bitstarter</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
-							<li class="active"><a href="#">Home</a></li>
+							<li class="active"><a href="/">Home</a></li>
 							<li><a href="#about">About</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
@@ -121,121 +334,118 @@
 			</div>
 		</div>
 
+		<header class="jumbotron" id="overview">
+			<div class="container repo">
+				<div class="row-fluid">
+					<div class="span6 offset3 center">
+						<h1><img id="main-logo" src="//notedcode.com/static/img/icon128.png" height="64" width="64">&nbsp;Noted Code</h1>
+						<p class="lead info">Noted Code lets you create, share and read high-quality notes on source code.</p>
+						<p class="center"><button id="tweet" class="btn btn-large btn-primary">Try it now!</button></p>
+					</div>
+				</div>
+			</div>
+		</header>
+
 		<div class="container">
-			<div class="row-fluid heading">
-				<div class="Span12">
-					<h1>Product</h1>
+			<div class="row-fluid intro">
+				<div class="span6 offset3 center">
+					<p class="lead">Unlike other "Bitstarters", Noted Code is not asking for your hard-earned bitcoins.</p>
+					<p class="lead">But what I'm building is going to be <em>very</em> useful for you during the course. You can use Noted Code now to help understand code better.</p>
 				</div>
 			</div>
-			<div class="row-fluid subheading">
-				<div class="span12">
-					<p class="lead">One sentence description.</p>
-				</div>
+		</div>
+
+		<div class="container section">
+			<div class="row-fluid center">
+				<img class="post-header-image-contain" src="https://d233eq3e3p3cv0.cloudfront.net/max/700/0*lRoU_muLNK3H4C1a.png" alt="" width="700" height="261">
 			</div>
-			<div class="row-fluid pitch">
-				<div class="span5 offset1 video">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+		</div>
+
+		<div class="container section" id="about">
+			<div class="row-fluid section1">
+				<div class="span5 offset1 copy">
+					<p>
+						Noted Code does three things very well:
+						<ol>
+							<li>It makes the code in any GitHub repository <em>much easier to read</em>, by extracting all code comments and presenting them in a structured manner alongside the code.</li>
+							<li>It lets you <em>add your own comments</em> in the form of notes alongside the code. Those comments stay with the code as it changes.</li>
+							<li>It shows you notes <em>from other people</em>, not just the original developer.</li>
+						</ol>
+					</p>
 				</div>
 
 				<div class="span5 actions">
-					<div class="span8 offset2">
-						<div class="statistics">
-							<div class="span4">
-								<div class="linediv-l">
-									<h3>1000</h3> <p>Backers</p>
-								</div>
-							</div>
-							<div class="span4">
-								<div class="linediv-c">
-									<h3>$6000</h3> <p> of $10,000</p>
-								</div>
-							</div>
-							<div class="span4">
-								<div class="linediv-r">
-									<h3>10</h3> <p> days left</p>
+					<div class="row-fluid">
+						<div class="span8 offset2">
+							<div class="statistics">
+								<div class="span8 offset2">
+									<div class="linediv-l">
+										<h3>27</h3> <p>Early Adopters</p>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="span10 offset1">
-						<div class="thermometer progress active">
-							<div class="bar bar-success" style="width: 60%;"></div>
-							<div class="bar bar-warning" style="width: 40%;"></div>
+					<div class="row-fluid">
+						<div class="span10 offset1">
+							<div class="thermometer progress active">
+								<div class="bar bar-success" style="width: 6%;"></div>
+							</div>
 						</div>
 					</div>
 
-					<div class="span6 offset3 order">
-						<button class="btn btn-success btn-large">Preorder</button>
-					</div>
-
-					<div class="span8 offset2 social">
-						<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-						<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+					<div class="row-fluid">
+						<div class="span8 offset2 social">
+							<button id="tweet" class="btn btn-large btn-primary">Try it now!</button>
+						</div>
 					</div>
 				</div>
 			</div>
+		
+			<div class="row-fluid pitch">
+							</div>
 
-			<!-- Beyond this part the marketing copy begins -->
-			<div class="row-fluid section1">
-				<div class="span5 offset1 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
-				</div>
-				<div class="span5 copy">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem.
-					</p>
-				</div>
-			</div>
+		</div>
 
+		<div class="darkblock separated">
 			<div class="row-fluid section2">
-				<div class="span5 offset1 copy copy-right">
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem.
-					</p>
-				</div>
-				<div class="span5 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+				<div class="span6 offset3 copy">
+					<p>A site where knowledge about code is shared easily can have a significant impact on the quality of software developers and what they produce. I’m building Noted Code as that place, and will work hard to nurture its growth as people contribute to it.</p>
+					<p>It’s got a long way to go, but in the spirit of “release early, release often”, you can try Noted Code now to see what I’m building. Browse and explore millions of code repositories from GitHub and Bitbucket, see how other developers have improved them with their notes, then use it to add your own.</p>
+					<p>Maybe we’ll both learn something.</p>
+					<p class="right">&mdash;Paul</p>
 				</div>
 			</div>
+		</div>
 
-			<!-- FAQ -->
-			<div class="row-fluid faq">
-				<div class="span10 offset1">
-					<h3>FAQ</h3>
-					<div class="accordion" id="accordion2">
-						<div class="accordion-group">
-							<div class="accordion-heading">
-								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-									What does FAQ stand for?
-								</a>
-							</div>
-							<div id="collapseOne" class="accordion-body collapse">
-								<div class="accordion-inner">
-									Frequently Asked Question.
-								</div>
-							</div>
-						</div>
-						<div class="accordion-group">
-							<div class="accordion-heading">
-								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-									What's a Frequently Asked Question?
-								</a>
-							</div>
-							<div id="collapseTwo" class="accordion-body collapse">
-								<div class="accordion-inner">
-									A question which is commonly asked by users.
-								</div>
-							</div>
-						</div>
+		<div class="container separated">
+			<div id="contact" class="row-fluid">
+				<div class="span12 center bigseparated">
+					<h1>What's happening?</h1>
+				</div>
+			</div>
+			<div class="row-fluid separated">
+				<div class="span3 offset3 center contact">
+					<ul>
+						<li><i class="icon-twitter"></i>&nbsp;<a href="http://twitter.com/notedcode">@notedcode</a></li>
+        				<li id="email"><i class="icon-envelope-alt"></i>&nbsp;paul@<span style="display:none">nowhere</span>notedcode.com</li>
+					</ul>
+				</div>
+				<div class="span3 center">
+					<div class="stamp">
+						<img id="sydney" class="stamp img-circle" src="https://notedcode.com/static/img/sydney.jpg" width="128" height="128" data-original-title="" title="">
 					</div>
 				</div>
 			</div>
+		</div>
+
+		<div class="container separated">
 
 			<!-- CC By-SA 3.0 license -->
 			<div class="row-fluid footer">
 				<div class="span12">
-					<p>This work is license under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>, without all the cruft that would otherwise be put at the bottom of the page.</p>
+					<p>This work is license under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>.</p>
 				</div>
 			</div>
 
