Final adjustment before submit

--- a/index.html
+++ b/index.html
@@ -289,10 +289,6 @@
 
 		<script type="text/javascript">
 			$(document).ready(function() {
-				$('#tweet').on('click', function() {
-					console.log("Tweet!");
-				});
-
 				$('#email').html('<i class="icon-envelope-alt"></i>&nbsp;<a href="mailto:paul@notedcode.com">paul@<span style="display:none">nowhere</span>notedcode.com</a>');
 
 				$('#sydney').popover({
@@ -340,7 +336,7 @@
 					<div class="span6 offset3 center">
 						<h1><img id="main-logo" src="//notedcode.com/static/img/icon128.png" height="64" width="64">&nbsp;Noted Code</h1>
 						<p class="lead info">Noted Code lets you create, share and read high-quality notes on source code.</p>
-						<p class="center"><button id="tweet" class="btn btn-large btn-primary">Try it now!</button></p>
+						<p class="center"><a href="https://notedcode.com" class="btn btn-large btn-primary">Try it now!</a></p>
 					</div>
 				</div>
 			</div>
@@ -397,7 +393,7 @@
 
 					<div class="row-fluid">
 						<div class="span8 offset2 social">
-							<button id="tweet" class="btn btn-large btn-primary">Try it now!</button>
+							<a href="https://notedcode.com" class="btn btn-large btn-primary">Try it now!</a>
 						</div>
 					</div>
 				</div>
@@ -445,7 +441,7 @@
 			<!-- CC By-SA 3.0 license -->
 			<div class="row-fluid footer">
 				<div class="span12">
-					<p>This work is license under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>.</p>
+					<p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>.</p>
 				</div>
 			</div>
 
