--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 				</div>
 				<div class="span6 center">
 					<p class="lead">Unlike many other "Bitstarters", Noted Code is not asking for your hard-earned bitcoins, just a Tweet.</p>
-					<p class="lead">But what I'm building is going to be <em>very</em> useful for you during the course. You can use Noted Code now to help understand code better.</p>
+					<p class="lead">But what I'm building should be very useful for you during the course. You can use Noted Code now to help understand code better.</p>
 				</div>
 				<div class="span3 center">
 					<p class="lead"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://notedcode.com" data-text="I'm trying something to make understanding code better." data-via="NotedCode" data-size="large">Tweet</a></p>
