--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 					<p class="lead">But what I'm building should be very useful for you during the course. You can use Noted Code now to help understand code better.</p>
 				</div>
 				<div class="span3 center">
-					<p class="lead"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://notedcode.com" data-text="I'm trying something to make understanding code better." data-via="NotedCode" data-size="large">Tweet</a></p>
+					<p class="lead"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://notedcode.com" data-text="Noted Code makes understanding code easier." data-via="NotedCode" data-size="large">Tweet</a></p>
 				</div>
 			</div>
 		</div>
