--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 		<div class="container">
 			<div class="row-fluid intro">
 				<div class="span6 offset3 center">
-					<p class="lead">Use it to help learn from the code that you read and study, by sharing notes with others.</p>
+					<p class="lead">Use it to learn from the code that you read and study, by sharing notes with others.</p>
 					<p class="lead">Search for any GitHub repository, browse any GitHub or Bitbucket repository, and keep track of all the notes that you make against code in them.</p>
 				</div>
 			</div>
