--- a/index.html
+++ b/index.html
@@ -414,12 +414,11 @@
 
 				<div class="span5 actions">
 					<div class="row-fluid">
-						<div class="span8 offset2">
+						<div class="span12">
 							<div class="statistics">
-								<div class="span8 offset2">
-									<div class="linediv-l">
-										<h3 id="usercount">?</h3> <p>Early Adopters</p>
-									</div>
+								<div class="linediv-l">
+									<h3><span id="usercount">?</span> early adopters</h3>
+									<p>(I'm aiming for 1000 before September 8)</p>
 								</div>
 							</div>
 						</div>
@@ -432,8 +431,8 @@
 							</div>
 						</div>
 					</div>
-
-					<div class="row-fluid">
+						
+					<div class="row-fluid separated">
 						<div class="span8 offset2 social">
 							<a href="https://notedcode.com" class="btn btn-large btn-primary">Try it now!</a>
 						</div>
@@ -442,7 +441,7 @@
 			</div>
 		
 			<div class="row-fluid pitch">
-							</div>
+			</div>
 
 		</div>
 
