--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+		<link rel="stylesheet" href="https://notedcode.com/static/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+
 		<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
 		<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+		<script type="text/javascript" src="https://notedcode.com/static/fancybox/jquery.fancybox.pack.js"></script>
 		
     	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
     	<link href='//fonts.googleapis.com/css?family=Source+Code+Pro:500' rel='stylesheet' type='text/css'>
@@ -100,6 +103,15 @@
 				font-size: 24px;
 				line-height: 30px;
 			}
+			p.caption {
+				padding-top: 20px;
+				margin-bottom: 40px;
+				font-size: 20px;
+			}
+			p.highlight {
+				padding: 20px;
+				font-weight: bold;
+			}
 			p {
 				font-size: 18px;
 				line-height: 24px;
@@ -119,6 +131,9 @@
 			.video, .thermometer, .order, .social, .statistics {
 				text-align: center;
 			}
+			.statistics {
+				margin-top: 40px;
+			}
 			.statistics h3, .statistics p {
 				color: #333;
 			}
@@ -133,6 +148,7 @@
 			}
 			.copy li {
 				line-height: 30px;
+				margin-top: 20px;
 			}
 			.asset {
 				padding: 2.5% 0%;
@@ -265,6 +281,21 @@
 				transform: rotate(45deg);
 			}
 
+			p.angled {
+				font-weight: bold;
+				font-size: 44px;
+				text-align: center;
+				margin-top: 40px;
+				line-height: 60px;
+
+				/* Rotate -30 degrees */
+				-webkit-transform: rotate(-30deg);
+				-moz-transform: rotate(-30deg);
+				-o-transform: rotate(-30deg);
+				transform: rotate(-30deg);
+
+			}
+
 			.contact {
 				margin-top: 20px;
 			}
@@ -287,6 +318,12 @@
 
 			div.stamp img {
 				border: 4px solid #ccc;
+			}
+
+			.trophy {
+				position: relative;
+				top: 3px;
+				right: 4px;
 			}
 
 		</style>
@@ -376,7 +413,7 @@
 				</div>
 				<div class="span6 center">
 					<p class="lead">Unlike many other "Bitstarters", Noted Code is not asking for your hard-earned bitcoins, just a Tweet.</p>
-					<p class="lead">But what I'm building should be very useful for you during the course. You can use Noted Code now to help understand code better.</p>
+					<p class="highlight well">Use Noted Code to learn from the code that you read and study, by sharing notes with others.</p>
 				</div>
 				<div class="span3 center">
 					<p class="lead"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://notedcode.com" data-text="Noted Code makes understanding code easier." data-via="NotedCode" data-size="large">Tweet</a></p>
@@ -392,33 +429,36 @@
 
 		<div class="container">
 			<div class="row-fluid intro">
-				<div class="span6 offset3 center">
-					<p class="lead">Use it to learn from the code that you read and study, by sharing notes with others.</p>
-					<p class="lead">Search for any GitHub repository, browse any GitHub or Bitbucket repository, and keep track of all the notes that you make against code in them.</p>
+				<div class="span12 center">
+					<h2>Noted Code lets you&hellip;</h2>
+				</div>
+			</div>
+			<div class="row-fluid separated">
+				<div class="span4 center">
+					<img src="https://notedcode.com/static/img/screenshots/ss1_thumb.png" width="270" height="204" class="img-polaroid">
+					<p class="caption">View code in a <em>clear format</em>, with comments placed alongside.</p>
+				</div>
+				<div class="span4 center">
+					<img src="https://notedcode.com/static/img/screenshots/ss3_thumb.png" width="270" height="196" class="img-polaroid">
+					<p class="caption"><em>Add your own comments</em> in the form of notes alongside the code.</p>
+				</div>
+				<div class="span4 center">
+					<img src="https://notedcode.com/static/img/screenshots/ss4_thumb.png" width="270" height="204" class="img-polaroid">
+					<p class="caption">View notes <em>from other people</em>, not just the original developer.</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="container section" id="about">
+		<div class="container" id="about">
 			<div class="row-fluid section1">
-				<div class="span5 offset1 copy">
-					<p>
-						Noted Code does three things very well:
-						<ol>
-							<li>It makes the code in any GitHub or Bitbucket repository <em>much easier to read</em>, by extracting all code comments and presenting them in a structured manner alongside the code.</li>
-							<li>It lets you <em>add your own comments</em> in the form of notes alongside the code. Those comments stay in the right place with the code as it changes.</li>
-							<li>It shows you notes <em>from other people</em>, not just the original developer.</li>
-						</ol>
-					</p>
-				</div>
-
-				<div class="span5 actions">
+				<div class="span6 offset3 actions">
 					<div class="row-fluid">
 						<div class="span12">
 							<div class="statistics">
 								<div class="linediv-l">
+									<p>Noted Code has</p>
 									<h3><span id="usercount">?</span> early adopters</h3>
-									<p>(I'm aiming for 1000 before September 8)</p>
+									<p>Help me reach 1,000 before September 8</p>
 								</div>
 							</div>
 						</div>
@@ -427,7 +467,8 @@
 					<div class="row-fluid">
 						<div class="span10 offset1">
 							<div class="thermometer progress active">
-								<div id="countbar" class="bar bar-success" style="width: 6%;"></div>
+								<span id="countbar" class="bar bar-success" style="width: 6%;"></span>
+								<i class="icon-trophy pull-right trophy"></i>
 							</div>
 						</div>
 					</div>
@@ -439,17 +480,12 @@
 					</div>
 				</div>
 			</div>
-		
-			<div class="row-fluid pitch">
-			</div>
-
 		</div>
 
 		<div class="darkblock separated">
 			<div class="row-fluid section2">
 				<div class="span6 offset3 copy">
-					<p>A site where knowledge about code is shared easily can have a significant impact on the quality of software developers and what they produce. I’m building Noted Code as that place, and will work hard to nurture its growth as people contribute to it.</p>
-					<p>It’s got a long way to go, but in the spirit of “release early, release often”, you can try Noted Code now to see what I’m building. Browse and explore millions of code repositories from GitHub and Bitbucket, see how other developers have improved them with their notes, then use it to add your own.</p>
+					<p>I've got many ideas for how to improvate Noted Code, but in the spirit of “release early, release often”, you can try it now to see what I’m building. Browse and explore millions of code repositories from GitHub and Bitbucket, see how other developers have improved them with their notes, then use it to add your own.</p>
 					<p>Maybe we’ll both learn something.</p>
 					<p class="right">&mdash;Paul</p>
 				</div>
