--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 		<div class="darkblock separated">
 			<div class="row-fluid section2">
 				<div class="span6 offset3 copy">
-					<p>I've got many ideas for how to improvate Noted Code, but in the spirit of “release early, release often”, you can try it now to see what I’m building. Browse and explore millions of code repositories from GitHub and Bitbucket, see how other developers have improved them with their notes, then use it to add your own.</p>
+					<p>I've got many ideas for how to improve Noted Code, but in the spirit of “release early, release often”, you can try it now to see what I’m building. Browse and explore millions of code repositories from GitHub and Bitbucket, see how other developers have improved them with their notes, then use it to add your own.</p>
 					<p>Maybe we’ll both learn something.</p>
 					<p class="right">&mdash;Paul</p>
 				</div>
