--- a/index.html
+++ b/index.html
@@ -359,6 +359,10 @@
 						$('#countbar').width(percent + '%');
 					}
 				});
+
+				$('a.screenshot').fancybox({
+					'hideOnContentClick': true
+				});
 			});
 		</script>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
@@ -396,7 +400,7 @@
 			<div class="container repo">
 				<div class="row-fluid">
 					<div class="span6 offset3 center">
-						<h1><img id="main-logo" src="//notedcode.com/static/img/icon128.png" height="64" width="64">&nbsp;Noted Code</h1>
+						<h1><img id="main-logo" src="https://notedcode.com/static/img/icon128.png" height="64" width="64">&nbsp;Noted Code</h1>
 						<p class="lead info">Noted Code lets you create, share and read high-quality notes on source code.</p>
 						<p class="center"><a href="https://notedcode.com" class="btn btn-large btn-primary">Try it now!</a></p>
 					</div>
@@ -423,7 +427,7 @@
 
 		<div class="container section">
 			<div class="row-fluid center">
-				<img class="post-header-image-contain" src="https://d233eq3e3p3cv0.cloudfront.net/max/700/0*lRoU_muLNK3H4C1a.png" alt="" width="700" height="261">
+				<img class="post-header-image-contain" src="https://notedcode.com/static/img/screenshots/leader.png" alt="" width="700" height="261">
 			</div>
 		</div>
 
@@ -435,15 +439,15 @@
 			</div>
 			<div class="row-fluid separated">
 				<div class="span4 center">
-					<img src="https://notedcode.com/static/img/screenshots/ss1_thumb.png" width="270" height="204" class="img-polaroid">
+					<a class="screenshot" rel="ssgroup" href="https://notedcode.com/static/img/screenshots/ss1.png"><img src="https://notedcode.com/static/img/screenshots/ss1_thumb.png" width="320" height="237" class="img-polaroid"></a>
 					<p class="caption">View code in a <em>clear format</em>, with comments placed alongside.</p>
 				</div>
 				<div class="span4 center">
-					<img src="https://notedcode.com/static/img/screenshots/ss3_thumb.png" width="270" height="196" class="img-polaroid">
+					<a class="screenshot" rel="ssgroup" href="https://notedcode.com/static/img/screenshots/ss2.png"><img src="https://notedcode.com/static/img/screenshots/ss2_thumb.png" width="320" height="237" class="img-polaroid"></a>
 					<p class="caption"><em>Add your own comments</em> in the form of notes alongside the code.</p>
 				</div>
 				<div class="span4 center">
-					<img src="https://notedcode.com/static/img/screenshots/ss4_thumb.png" width="270" height="204" class="img-polaroid">
+					<a class="screenshot" rel="ssgroup" href="https://notedcode.com/static/img/screenshots/ss3.png"><img src="https://notedcode.com/static/img/screenshots/ss3_thumb.png" width="320" height="237" class="img-polaroid"></a>
 					<p class="caption">View notes <em>from other people</em>, not just the original developer.</p>
 				</div>
 			</div>
