Added AddThis buttons

--- a/index.html
+++ b/index.html
@@ -326,6 +326,12 @@
 				right: 4px;
 			}
 
+			/* Helps center buttons */
+			div.addthis_toolbox {
+				width:180px;
+				margin: 0 auto;
+			}
+
 		</style>
 
 		<script type="text/javascript">
@@ -420,7 +426,15 @@
 					<p class="highlight well">Use Noted Code to learn from the code that you read and study, by sharing notes with others.</p>
 				</div>
 				<div class="span3 center">
-					<p class="lead"><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://notedcode.com" data-text="Noted Code makes understanding code easier." data-via="NotedCode" data-size="large">Tweet</a></p>
+					<!-- AddThis Button BEGIN -->
+					<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+					<a class="addthis_button_facebook"></a>
+					<a class="addthis_button_twitter"></a>
+					<a class="addthis_button_google_plusone_share"></a>
+					</div>
+					<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+					<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fc6aa775ba9b32"></script>
+					<!-- AddThis Button END -->
 				</div>
 			</div>
 		</div>
