Updated to current version

--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
 				width:108px;
 				margin: 0 auto;
 			}
+
 		</style>
 
 		<script type="text/javascript">
@@ -360,7 +361,7 @@
 						var count = data['count'];
 						$('#usercount').html(count);
 
-						var percent = count / 10;
+						var percent = count / 2;
 						$('#countbar').width(percent + '%');
 					}
 				});
@@ -370,6 +371,7 @@
 				});
 			});
 		</script>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 		<script type="text/javascript">
   			var _gaq = _gaq || [];
   			_gaq.push(['_setAccount', 'UA-582156-10']);
@@ -494,7 +496,7 @@
 								<div class="linediv-l">
 									<p>Noted Code has</p>
 									<h3><span id="usercount">?</span> early adopters</h3>
-									<p>Help me reach 1,000 before September 8</p>
+									<p>Help me reach 200 before September 8</p>
 								</div>
 							</div>
 						</div>
